# rechunk

./: .gitignore  AGENTS.md  DERIVED_CHUNKS.md  INCREMENTAL_CORPUS_SYNC_PLAN.md  README.md  TEMPORAL_DESIGN.md  TEMPORAL_IMPLEMENTATION_STEPS.md  pyproject.toml  rechunk_strategies.json  rechunk_strategies.json.example  rechunk_strategy.md  temporal_activities.py  temporal_vectorization_inputs.py  temporal_worker.py  temporal_workers.py  temporal_workflows.py
docs/: sample.txt  toxin_dosing_guide_2025.txt
scripts/: BENCHMARK_CORPORA.md  prepare_hf_benchmark_corpus.py  rechunk_doctor.py  run_interactive.py  run_with_docs.py  run_with_ecs.py  start_corpus_ingest.py  start_strategy_chunking.py  write_corpus_manifest.py
src/rechunk/: __init__.py  active_corpus_manifest.py  cache.py  chunker.py  corpus.py  corpus_manager.py  corpus_snapshot_id.py  derived_metadata.py  doc_loader.py  documents.py  fingerprints.py  hash_manifest.py  index_service.py  ingest_snapshot.py  node_parser.py  node_span_utils.py  rag_index.py  repo_paths.py  retrieval.py  strategies.py  temporal_client.py  temporal_queues.py  vector_index_cache.py  vectorization_config.py  worker_runtime.py
src/rechunk/extracted_content/: __init__.py  filesystem.py  models.py  protocol.py
src/rechunk/vector_store/: __init__.py  filesystem.py  freshness.py  protocol.py
tests/: __init__.py  conftest.py  test_active_corpus_manifest.py  test_activity_logic.py  test_corpus.py  test_corpus_manager.py  test_derived_metadata.py  test_derived_node_parser.py  test_hash_manifest.py  test_node_parser.py  test_phase_a_v12_contracts.py  test_phase_b_filesystem_stores.py  test_phase_c_vectorization.py  test_rag_index.py  test_rag_vector_store.py  test_temporal_ingest_activity.py  test_vector_index_cache.py
